# tsot

./: .gitignore  CARD.md  CLAUDE.md  Caddyfile  Cargo.toml  DRY_ANALYSIS.md  EA.md  ELM_PLAN.md  ERROR.md  HANDOVER.md  JOURNAL.md  LIMITATIONS.md  LUA.md  Makefile  OBSERVABILITY.md  README.md  RULES.md  SLOTS.md  STACK.md  STATE_MACHINE.md  STATIC.md  UX.md  VISION.md  WASM_PLAN.md  build.rs  build.ts  dev-server.ts  flake.nix  index.html  tsconfig.json
crates/bevy-input-capture/: Cargo.toml
crates/bevy-input-capture/src/: lib.rs
crates/cdda/: ATTRIBUTION.md  COMMIT  Cargo.toml  README.md  RELEASE  build.rs  files.txt
crates/cdda/examples/: wall_graph_dump.rs
crates/cdda/src/: building.rs  cells.rs  chunks.rs  hash.rs  lib.rs  palette.rs  parse.rs  placement.rs  template.rs
crates/cdda/tools/: fetch.sh
crates/laye-input/: Cargo.toml
crates/laye-input/src/: lib.rs
crates/rave-health/: Cargo.toml
crates/rave-health/src/: lib.rs
crates/rave-mem-diagnostic/: Cargo.toml
crates/rave-mem-diagnostic/src/: main.rs
crates/rave-positions-test/: Cargo.toml
crates/rave-positions-test/src/: lib.rs
crates/rave-positions-test/tests/: chat_via_relayer.rs  positions_via_relayer.rs
crates/sacred-error/: Cargo.toml
crates/sacred-error/src/: lib.rs
crates/seer-host/: Cargo.toml
crates/seer-host/src/: imports.rs  main.rs  report.rs  state.rs  summary.rs
crates/seer-imports-check/: Cargo.toml
crates/seer-imports-check/src/: main.rs
crates/seer-obs/: Cargo.toml
crates/seer-obs/src/: lib.rs
crates/seer-p2p/: Cargo.toml
crates/seer-p2p-test/: Cargo.toml
crates/seer-p2p-test/src/: lib.rs
crates/seer-p2p-test/tests/: publish_receive.rs
crates/seer-p2p/src/: lib.rs
crates/tsot-card/: Cargo.toml
crates/tsot-card/src/: lib.rs
game/: Architecture.md  CLAUDE.md  CONTINUOUS_WOOD.md  Cargo.toml  HANDOVER.md  Makefile  README.md  TREES.md  VISION.md  build.rs  cdda-files.txt  deny.toml  flake.nix  imports.allow
game/assets/cdda/: ATTRIBUTION.md
game/docs/: CANONICAL.md  RENDER.md  TERRAIN.md  TREES.md  canonical-world.md  laye-browser-p2p.md  relaye-game-gateway.md  the-end-of-the-universe.md
game/examples/: grid_drape_preview.rs  heightfield_preview.rs  room_hull_preview.rs  terrain_perf.rs  wall_mesh_preview.rs
game/src/: audio.rs  bang.rs  buildings.rs  campfire.rs  campsite.rs  cdda.rs  chunk.rs  dpad.rs  gpu.rs  gpu_web.rs  hash.rs  health.rs  hud.rs  identity.rs  input.rs  isosurface.rs  jukebox.rs  lib.rs  map.rs  music.rs  net.rs  obs.rs  palette.rs  persist.rs  physics.rs  remote_players.rs  render.rs  render_web.rs  room.rs  scene.rs  sfx.rs  shaders.rs  sound_button.rs  template.rs  terrain.rs  trail.rs  tree_emit.rs  tree_mesh.rs  tree_surface.rs  trees.rs  (+6 more)
game/src/cdda/: building.rs  cells.rs  chunks.rs  mod.rs  parse.rs  placement.rs
game/src/scene/: camera.rs  drape.rs  emit.rs  instance.rs  mod.rs  props.rs  snapshot.rs  terrain_surface.rs
game/tests/: audio_handle.rs  remote_players_color.rs  remote_players_framing.rs  remote_players_ingest.rs  scene_remote_players.rs
game/tools/: fetch-cdda.sh
game/web/: CLAUDE.md  build.ts  index.html  package.json  style.css
game/web/src/: main.ts
rave/: BEVY.md  CLAUDE.md  Cargo.toml  Makefile  README.md  flake.nix  index.html
rave-wgpu-poc/: Cargo.toml  HANDOVER.md  README.md
rave-wgpu-poc/src/: lib.rs  mesh.rs  scene.rs  shader.wgsl
rave-wgpu-poc/web/: build.sh  index.html
rave/.cargo/: config.toml
rave/src/: audio.rs  build_info.rs  campfire.rs  chat.rs  drawer.rs  error.rs  floorplan.rs  health.rs  identity.rs  lib.rs  main.rs  map.rs  memory_report.rs  minimap.rs  net.rs  net_glue.rs  observability.rs  physics.rs  remote_players.rs  room.rs  runtime_report.rs  trail.rs  trees.rs
rave/tests/: positions_via_relayer.rs
rave/tools/: bisect-mem.sh  gen-rave-ogg.py
rave/web/: hash-and-stage.sh  index-shim.html  index.html  package.json  tsconfig.json
rave/web/src/: bridges.d.ts  chat-overlay.ts  error-bridge.ts  gpu-alloc.ts  identity-bridge.ts  loading.ts  main.ts  mem-graph.ts  overlay.ts  screenshot.ts
roam/: .gitignore  CANONICAL.md  CLAUDE.md  Caddyfile  Cargo.toml  IDENTITY-RESEARCH.md  IDENTITY.md  LEARNING.md  Makefile  OBSERVABILITY.md  README.md  flake.nix  package.json  tsconfig.json
roam/.cargo/: config.toml
roam/assets/: elm.json  play.html
roam/assets/src/: Error.elm  identity.js  js-bridge.js  net-shim.js  net-worker.js
roam/docs/: CANONICAL.md  IDENTITY.md  OBSERVABILITY.md  UI.md  canonical.md  identity.md  transport.md
roam/docs/adr/: 0001-wasm-bindgen.md  0002-rust-libp2p.md  0003-bevy.md
roam/relay/: UPSTREAM.md  bun-ws-transport.ts  relay.ts  relayers.md
roam/relayers/: Cargo.toml
roam/relayers/src/: identity_secret.rs  main.rs  metrics.rs
roam/research/: IDENTITY.md  INSPIRATIONS.md  NETWORK.md  identity.md  network.md
roam/src/: bevy_spike.rs  build_info.rs  catalog.rs  error.rs  identity.rs  input.rs  layout.rs  lib.rs  main.rs  perf.rs  render_gl.rs  teranos.rs  trace.rs  viewport.rs  wasm_ffi.rs  world.rs
roam/src/net/: STATUS.md  js_libp2p.rs  mod.rs  rust_libp2p.rs  state.rs  worker_bridge.rs
roam/src/render_gl/: card.rs  flower.rs  helpers.rs  line.rs  marker.rs  mod.rs  tile.rs
roam/src/teranos/: card.rs  flower.rs  hash.rs  mod.rs  noise.rs  terrain.rs
roam/src/ui/: mod.rs
roam/test/: dev-tap.ts  headless-net-js-vs-js.ts  headless-net.ts  identity.test.js  inspect.ts  mesh.test.ts
roam/tests/: catalog_via_relayer.rs  m6_via_relayer.rs  positions_high_rate.rs
seer/: Cargo.toml  imports.allow
seer/src/: build_info.rs  error.rs  lib.rs  main.rs  obs.rs  physics.rs  render.rs  room.rs  trees.rs
seer/viewer/: build.ts  dev-server.ts  package.json
seer/viewer/src/: Column.svelte  ColumnHeader.svelte  DeltasRow.svelte  Frame.svelte  FrameStrip.svelte  LiveRun.svelte  (+4 more)
seer/web/: index.html
spikes/bevy-canvas/: Cargo.toml  README.md  index.html
universe/: .gitignore  BEVY.md  CLAUDE.md  Cargo.toml  Makefile  README.md  Trunk.toml  flake.nix  index.html
universe/src/: build_info.rs  lib.rs  main.rs
(+686 files in other folders)
