[package]
name = "tsot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tsot"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.20", features = ["derive"] }
include_dir = "=0.7.4"
maud = "=0.27.0"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rand = "0.8"
rayon = "=1.10.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.2.15", features = ["js"] }

[lints.clippy]
# Determinism: see clippy.toml for the disallowed sets.
disallowed_types = "deny"
disallowed_methods = "deny"
