[package]
name = "tsot"
version = "0.1.0"
edition = "2021"
# Two bins now (tsot, tsot_wasm) — `cargo run` without --bin would
# otherwise refuse to pick. `tsot` is the native CLI, the one make
# targets and humans actually run; `tsot_wasm` only ever builds
# under --target wasm32-unknown-emscripten.
default-run = "tsot"

[lib]
# `rlib` is used by every consumer of `tsot` as a library (the native
# bin, tests, etc.). `cdylib` would also generate a .dylib on native
# and a SIDE_MODULE on wasm32-unknown-emscripten — we don't need
# either: the WASM build is via the `tsot_wasm` bin (standalone
# module + JS loader, not a side module).
crate-type = ["rlib"]

[[bin]]
name = "tsot"
path = "src/main.rs"

# WASM-only entry point. Empty `main()` so emscripten produces a
# standalone module + JS loader pair instead of a SIDE_MODULE (which
# is what cdylib emits on emscripten target — meant for dlopen, not
# what we want for the browser). The actual exports live in
# `src/wasm_ffi.rs` and are reachable through the lib.
[[bin]]
name = "tsot_wasm"
path = "src/bin/tsot_wasm.rs"

[dependencies]
clap = { version = "=4.5.20", features = ["derive"] }
include_dir = "=0.7.4"
maud = "=0.27.0"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rand = "0.8"
rayon = "=1.10.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tiny_http = "=0.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.2.15", features = ["js"] }

[profile.release]
# panic = "abort" stops Rust's panic_unwind crate (and the
# `__cxa_find_matching_catch_*` references it emits) from being linked
# in. Required for the wasm32-unknown-emscripten build — rustc forces
# `-fwasm-exceptions` (new ABI) in its target spec, but the precompiled
# stdlib's panic_unwind references the LEGACY ABI symbols. With
# panic=abort, the unwind machinery isn't pulled in at all so the
# mismatch never matters. Native release builds also abort on panic,
# which is fine for a CLI that has no panic recovery anywhere.
panic = "abort"

[lints.clippy]
# Determinism: see clippy.toml for the disallowed sets.
disallowed_types = "deny"
disallowed_methods = "deny"
