[package]
name = "game"
version = "0.1.0"
edition = "2024"
publish = false
description = "The game. Bevy ECS + wgpu render on native, wasm32-unknown-unknown for browser deploy at game.sbvh.nl."

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "game-native"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
debug = 1

[dependencies]
bevy_app = "=0.19.0"
bevy_ecs = "=0.19.0"
bevy_math = "=0.19.0"
serde = { version = "=1.0.228", features = ["derive"] }
sacred-error = { path = "../crates/sacred-error" }
seer-obs = { path = "../crates/seer-obs" }

[dev-dependencies]
serde_json = "=1.0.143"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.anyhow]
version = "=1.0.100"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "=29.0.3", default-features = false, features = ["wgsl", "metal", "vulkan"] }
pollster = "=0.4.0"
png = "=0.17.16"
