[package]
name = "rave"
version = "0.1.0"
edition = "2024"
publish = false
exclude = ["dist"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[features]
default = ["backend-webgpu"]
backend-webgpu = ["bevy/webgpu"]
backend-webgl2 = ["bevy/webgl2"]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "=0.19.0", default-features = false, features = [
    "3d_api",
    "3d_bevy_render",
    "tonemapping_luts",
    "ui_api",
    "ui_bevy_render",
    "bevy_winit",
    "default_font",
    "bevy_asset",
    "bevy_state",
    "png",
    "bevy_audio",
    "vorbis",
] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.143"
sacred-error = { path = "../crates/sacred-error" }
rave-health = { path = "../crates/rave-health" }
bevy-libp2p = { git = "https://github.com/teranos/laye.git", rev = "1e5bd8183d488b5b1919f6e6ea5e37cdbc7e13bf" }
bevy-observability = { git = "https://github.com/teranos/laye.git", rev = "1e5bd8183d488b5b1919f6e6ea5e37cdbc7e13bf" }
bevy-drawer = { git = "https://github.com/teranos/laye.git", rev = "1e5bd8183d488b5b1919f6e6ea5e37cdbc7e13bf" }
bevy-chat = { git = "https://github.com/teranos/laye.git", rev = "1e5bd8183d488b5b1919f6e6ea5e37cdbc7e13bf" }
bevy-input-capture = { git = "https://github.com/teranos/laye.git", rev = "1e5bd8183d488b5b1919f6e6ea5e37cdbc7e13bf" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.3.4", features = ["wasm_js"] }
js-sys = "=0.3.98"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
