[package]
name = "roam"
version = "0.1.0"
edition = "2021"
default-run = "roam"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "roam"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.121"
js-sys = "=0.3.98"
getrandom = { version = "=0.2.15", features = ["js"] }
web-sys = { version = "=0.3.98", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
] }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[profile.dev]
panic = "abort"
