[package]
name = "roam"
version = "0.1.0"
edition = "2021"
default-run = "roam"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "roam"
path = "src/main.rs"

[features]
# rust-libp2p is the default substrate. `--no-default-features` (or
# `make wasm-js-only`) builds the JS-libp2p-only fallback bundle.
default = ["rust-libp2p"]
rust-libp2p = ["dep:libp2p", "dep:libp2p-connection-limits", "dep:wasm-bindgen-futures", "dep:futures", "dep:futures-timer", "dep:getrandom_0_3"]

[dependencies]
sacred-error = { path = "../crates/sacred-error" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Base58btc for did:key encoding (M1). Crate already transitive via
# libp2p; pinned direct so the import path stays stable.
bs58 = "=0.5.1"

# rust-libp2p substrate (phase 3). Gated by the `rust-libp2p` feature.
# Pinned to a specific version per CLAUDE.md — if cargo resolves and
# wasm32 links, this is the verified-working combination. Browser-only
# feature set: no tokio (no runtime in wasm), no `tcp` (no sockets in
# browser), no `noise+yamux` defaults — explicit picks only.
libp2p = { version = "=0.56.0", optional = true, default-features = false, features = [
    "websocket-websys",
    "webrtc-websys",
    "noise",
    "yamux",
    "gossipsub",
    "ping",
    "identify",
    "macros",
    "wasm-bindgen",
] }
# `libp2p-connection-limits` enforces "only the relay" at the swarm
# level. roam doesn't need a wide mesh — the relay re-broadcasts
# gossipsub via `roam/relayers/` (it subscribes to TOPIC itself), so a
# single connected peer is sufficient. Without this cap, libp2p auto-
# dials peers identify learns about and the bridge surfaces the
# failures as a high-rate `net::provider_error` stream. Direct dep
# because the libp2p meta-crate doesn't expose this behaviour through
# a feature flag in 0.56.0 (only `memory-connection-limits` is gated).
libp2p-connection-limits = { version = "=0.6.0", optional = true }
wasm-bindgen-futures = { version = "=0.4.71", optional = true }
# `futures` (channels + StreamExt + select_biased!) drives the
# `RustLibp2pProvider` Swarm task. Transitive via libp2p today but
# pinned as a direct dep so the import path stays stable.
futures = { version = "=0.3.32", optional = true }
# Periodic-tick future for the rust-libp2p heartbeat diagnostic. Already
# transitive via libp2p; pinned as a direct dep so the import path is
# stable + survives a libp2p revision that drops it.
futures-timer = { version = "=3.0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.121"
js-sys = "=0.3.98"
getrandom = { version = "=0.2.15", features = ["js"] }
# getrandom 0.3 enters the tree transitively via libp2p (the feature
# gate `rust-libp2p`). The wasm32-unknown-unknown target needs the
# `wasm_js` feature explicitly + the `getrandom_backend="wasm_js"`
# rustflag in `.cargo/config.toml`. Direct dep here so the feature is
# enabled even when libp2p pulls 0.3 transitively; the rustflag side
# is conditioned on the `rust-libp2p` feature via cargo build invocation.
getrandom_0_3 = { package = "getrandom", version = "=0.3.4", features = ["wasm_js"], optional = true }
web-sys = { version = "=0.3.98", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
] }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[profile.dev]
panic = "abort"

# Native test dependencies — only built when `cargo test` runs against
# the lib + tests/ tree, never linked into the wasm bundle or the
# production binary. The integration test at `tests/m6_via_relayer.rs`
# uses the same libp2p version the production stack pins (=0.56.0) but
# with native features (tcp, websocket, tokio, noise, yamux), matching
# the relayer's transport so the wire is the same protocol the deployed
# binary speaks. Anything pinned with `=0.x.y` mirrors what
# `roam/relayers/Cargo.toml` and the main `[dependencies]` already use,
# to keep one version graph across the workspace.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
libp2p = { version = "=0.56.0", default-features = false, features = [
    "tokio",
    "websocket",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "gossipsub",
    "ping",
    "identify",
    "macros",
] }
tokio = { version = "=1.47.1", features = ["full"] }
futures = "=0.3.32"
