[package]
name = "seer"
version = "0.1.0"
edition = "2024"
publish = false
description = "Observability-first cross-target Rust. Same source compiles to (a) native binary and (b) wasm32-unknown-unknown module hosted by seer-host (wasmtime). Every allocation attributed with source. Every boundary crossing recorded by the host. Founding architectural constraint from commit #1; not a subsystem retrofitted later."

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "seer-native"
path = "src/main.rs"

# Release profile keeps debug info + wasm name section so backtraces on
# native are Rust source paths and, when we add browser deploy, wasm
# frames still name their Rust identifiers instead of function offsets.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = false
debug = 1

[dependencies]
bevy_app = "=0.19.0"
bevy_ecs = "=0.19.0"
bevy_math = "=0.19.0"

# Native-only. wgpu on wasm-in-browser requires wasm-bindgen glue we
# haven't wired yet; wgpu under wasmtime has no host anyway — the
# wasmtime target uses the obs::buffer_created / texture_created /
# shader_created interface directly (Phase 3), no real GPU calls.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "=29.0.3", default-features = false, features = ["wgsl", "metal", "vulkan"] }
pollster = "=0.4.0"
