[package]
name = "bevy-input-capture"
version = "0.1.0"
edition = "2021"
description = "Bevy adapter for laye-input. Wraps InputClaims as a Resource + Plugin (B4), binds default keys to Intent events (B5). Incubating in tsot-roam; promoted to laye/crates/ once proven against rave."

[lib]
crate-type = ["rlib"]

[dependencies]
laye-input = { path = "../laye-input" }
bevy_app = { version = "=0.19.0", default-features = false }
bevy_ecs = { version = "=0.19.0", default-features = false }
bevy_input = { version = "=0.19.0", default-features = false }
