[package]
name = "sacred-error"
version = "0.1.0"
edition = "2021"
description = "The Sacred Error primitive — one typed value that crosses every layer of the system unchanged. See ERROR.md at the repository root for the axiom."

# Library only; this crate has no binaries, no examples, no build
# script. Consumed by `tsot` and `roam` via path dependency.
[lib]
crate-type = ["rlib"]

[dependencies]
# Loosened from `=1.0.219` to `1.0.219` (range, not exact) so Bevy
# 0.18's transitive deps (which want serde ≥1.0.220) can resolve in
# roam's graph. serde 1.0.x is API-stable; the exact-pin gave us
# nothing the range doesn't, and blocked the engine adoption. ccg
# stays pinned at `=1.0.219` in its own Cargo.toml — that constraint
# still picks 1.0.219 in ccg's graph, no cross-project impact.
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
# Tests pin the wire shape; serde_json is the cross-layer envelope.
# Same pin as TSOT root.
serde_json = "=1.0.140"
