[package]
name = "seer-host"
version = "0.1.0"
edition = "2024"
publish = false
description = "Wasmtime host that runs the seer wasm module: wires the imports, records every boundary crossing, writes summary/verdict/metrics/report JSON per run."

[[bin]]
name = "seer-host"
path = "src/main.rs"

[profile.release]
debug = 1

[dependencies]
wasmtime = "=25.0.2"
anyhow = "=1.0.100"
rustc-demangle = "=0.1.27"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.143"

seer-p2p = { path = "../seer-p2p" }
tokio = { version = "=1.47.1", features = ["rt", "macros", "time"] }
