[package]
name = "seer-imports-check"
version = "0.1.0"
edition = "2024"
publish = false
description = "Fails CI when game.wasm's import section drifts from game/imports.allow. Emits a +/- diff of what changed."

[[bin]]
name = "seer-imports-check"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true

[dependencies]
wasmparser = "=0.217.1"
