[package]
name = "seer-obs"
version = "0.1.0"
edition = "2024"
publish = false
description = "The seer observability bus. Extracted from seer/src/obs.rs so anything else that wants to publish/consume the same signal shape (peer-node observers, integration test binaries, future workspace crates) has a workspace crate to depend on instead of a re-implementation."

[lib]
crate-type = ["rlib"]

# No native/wasm deps of its own. Consumers cfg-gate the platform
# specifics; this crate just defines the shape and the static
# counters. The wasm import block below is behind cfg so a native
# consumer never sees it.
[dependencies]
