[package]
name = "seer-obs"
version = "0.1.0"
edition = "2024"
publish = false
description = "Instrumented global allocator + GPU resource inventory + wasm-side hotspot ring. Native + wasm32."

[lib]
crate-type = ["rlib"]

# No native/wasm deps of its own. Consumers cfg-gate the platform
# specifics; this crate just defines the shape and the static
# counters. The wasm import block below is behind cfg so a native
# consumer never sees it.
[dependencies]
